2017-08-08  Peter Stephenson  <p.stephenson@samsung.com>

	* 41510: Doc/Zsh/params.yo: update doc for $ZSH_PATCHLEVEL.

2017-08-08  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 41481: Completion/Unix/Command/_df,
	Completion/Unix/Command/_mount, Completion/Unix/Type/_umountable:
	_df: Complete mounted device and mount points.

	* 41486: Completion/Unix/Command/_tmux: Correct completions of
	new-window, split-window, respawn-window, respawn-pane.

	* unposted: Config/version.mk: Post-release version number bump
	to 5.4-dev-0.

2017-08-07  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: version 5.4.

	* 41499 (with one further tweak): Src/utils.c,
	Doc/Zsh/options.yo, Test/E01options.ztst: With POSIX_STRINGS
	ignore terminating separator when splitting.

2017-08-07  Peter Stephenson  <p.stephenson@samsung.com>

	* Anthony: 41500: Doc/Zsh/mod_zutil.yo: document '-' to end
	zparseopts options.

2017-08-05  Oliver Kiddle  <opk@zsh.org>

	* 41493: Completion/Unix/Command/_git: fix to not print hash
	into terminal and update options for git 2.14

	* 41492: Completion/BSD/Command/_gstat,
	Completion/Unix/Command/_flex, Completion/Unix/Command/_sqlite,
	Completion/Unix/Command/_sudo: update options in completions

2017-08-03  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 41485: Test/A03quoting.ztst: test for previous fix.

	* Martijn: 41484: Src/utils.c: ${(q+)...} didn't properly
	quote backslashes.

2017-08-02  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 41479: Completion/Unix/Command/_xz: Complete compressed,
	rather than uncompressed, files after -d.

	* 41475: Completion/Unix/Command/_git: Complete files after
	'reset' when there are no commits, when the 'verbose' style
	is set.

2017-08-01  Peter Stephenson  <p.stephenson@samsung.com>

	* 41470: Doc/Zsh/builtins.yo: note that 41464 stops exec finding
	other precommand modifiers with POSIX_BUILTINS (for now, at
	least).

2017-08-01  Daniel Shahaf  <d.s@daniel.shahaf.name>
